# sandbox

./: LICENSE  README.md
audio_align/: main.py  pyproject.toml
cv_compare/: test_cv2_mediainfo.py
cv_resize/: resize.py
decord_vs_cv2/: bench_mark.py
image_sequence_plot/: README.md  main.py
numba_perf/: README.md  perf_sum.py
pygdrive2/: main.py  pyproject.toml
resize/: README.md  setup.py
resize/cv2_resize/: resize.py
resize/tests/: test_aspect_ratio.py
silly_phrase_bot/: README.md  TODO.md  default.yaml  demo.json  phrase.csv  phrase.txt  pubspec.yaml  requirements.txt
silly_phrase_bot/lib/: silly_phrase_bot.dart
silly_phrase_bot/lib/src/: io.dart  main.dart  model.dart  model.g.dart
silly_phrase_bot/shell/: build_exe.sh  upload.sh  upload_bin.sh
silly_phrase_bot/test/: test_usage.dart
silly_phrase_bot/upload/: google_drive_csv.py  upload_phrase_json.py
switch_bot/: demo.py
text_atlas/: ja_unicode.py  main.py  opencv_ja.py  text_atlas.py
word_cloud_ja/: main.py  phrase.txt
yaml_config/: README.md  demo.py  demo.yaml  pyproject.toml
yaml_config/tests/: config.yaml  test_main.py
yaml_config/ymlc/: __init__.py  main.py  test.py
